# asr_descriptor_surface_based_recognition

./: CMakeLists.txt  License.txt  README.md  package.xml
cfg/: DescriptorSurfaceBasedRecognition.cfg
include/: descriptor_surface_based_recognition.h  object_2D_positions.h  object_descriptor.h  object_view_descriptor.h  pose_recognition.h  pose_validation.h  recognition_result.h  rotation_axis.h  util.h
include/descriptor_surface_based_trainer/: Create_Output_Files_Dialog.h  Create_Output_Files_Dialog_Base.h  Create_Test_Model_Dialog.h  Create_Test_Model_Dialog_Base.h  Desc_Models_Dialog.h  Desc_Models_Dialog_Base.h  Descriptor_Surface_Based_Trainer.h  Main_Dialog.h  Main_Dialog_Base.h  Utils.h  View_Creator_Dialog.h  View_Creator_Dialog_Base.h  View_Params_Wrapper.h  wxImagePanel.h
launch/: descriptor_surface_based_recognition.launch  descriptor_surface_based_recognition_core.launch  descriptor_surface_based_trainer.launch
licenses/: third_party_licenses.txt
log/: rosconsole.config
param/: desc_surf_rec_params.yaml  desc_surf_rec_params_mild.yaml
src/: descriptor_surface_based_recognition.cpp  object_2D_positions.cpp  object_descriptor.cpp  object_view_descriptor.cpp  pose_recognition.cpp  pose_validation.cpp  recognition_result.cpp  rotation_axis.cpp  util.cpp
src/descriptor_surface_based_trainer/: Create_Output_Files_Dialog.cpp  Create_Output_Files_Dialog_Base.cpp  Create_Test_Model_Dialog.cpp  Create_Test_Model_Dialog_Base.cpp  Desc_Models_Dialog.cpp  Desc_Models_Dialog_Base.cpp  Descriptor_Surface_Based_Trainer.cpp  Main_Dialog.cpp  Main_Dialog_Base.cpp  Utils.cpp  View_Creator_Dialog.cpp  View_Creator_Dialog_Base.cpp  View_Params_Wrapper.cpp  wxImagePanel.cpp
srv/: GetObjectList.srv  GetRecognizer.srv  ReleaseRecognizer.srv
trainer_data/input/: README.txt
trainer_data/output/: README.txt
