<package>
  <name>asr_descriptor_surface_based_recognition</name>
  <version>1.0.0</version>
  <description>This package contains an object detector for textured objects</description>
  <author>Allgeyer Tobias, Hutmacher Robin, Meißner Pascal</author>
  <maintainer email="asr-ros@lists.kit.edu">Meißner Pascal</maintainer>
  <license>GPL</license>
  <url type="website">http://ros.org/wiki/asr_descriptor_surface_based_recognition</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>asr_halcon_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>asr_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>wxWidgets</build_depend>
  <build_depend>Boost</build_depend>
  <build_depend>Eigen</build_depend>
  <build_depend>asr_object_database</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>asr_ros_uri</build_depend>
  <build_depend>asr_rapidxml</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>cmake_modules</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>asr_halcon_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>asr_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>wxWidgets</run_depend>
  <run_depend>Boost</run_depend>
  <run_depend>Eigen</run_depend>
  <run_depend>asr_object_database</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>asr_ros_uri</run_depend>
  <run_depend>asr_rapidxml</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


